# deb

./: .gitignore  pyproject.toml
debitos/: main.py
debitos/utils/: __init__.py  exposed_promise.py  fileDownloadScript.py  file_download_script.py  intercept_request.py
debitos/utils/profiles/Profile 5/: Affiliation Database  AggregationService  Bookmarks  BrowsingTopicsSiteData  BrowsingTopicsState  Conversions  DIPS  Favicons  History  InterestGroups  KAnonymityService  Login Data  MediaDeviceSalts  Network Action Predictor  Preferences  PrivateAggregation  Secure Preferences  SharedStorage  Shortcuts  Top Sites  Translate Ranker Model  Visited Links  Web Data  trusted_vault.pb
debitos/utils/profiles/Profile 5/DawnGraphiteCache/: data_1  index
debitos/utils/profiles/Profile 5/DawnWebGPUCache/: data_1  index
debitos/utils/profiles/Profile 5/Extension Rules/: LOG  LOG.old
debitos/utils/profiles/Profile 5/Extension Scripts/: LOG  LOG.old
debitos/utils/profiles/Profile 5/Extension State/: LOG  LOG.old
debitos/utils/profiles/Profile 5/GCM Store/: LOG  LOG.old
debitos/utils/profiles/Profile 5/GPUCache/: data_1  index
debitos/utils/profiles/Profile 5/JumpListIconsRecentClosed/: 1f6c52cf-c3fe-48d7-8ad9-5fa2826b271d.tmp  2af1d35d-4b94-46dc-a621-6fc45b4ab941.tmp
debitos/utils/profiles/Profile 5/Network/: Cookies  Network Persistent State  Reporting and NEL
debitos/utils/profiles/Profile 5/Platform Notifications/: LOG  LOG.old
debitos/utils/profiles/Profile 5/Session Storage/: 000003.ldb  LOG  LOG.old  MANIFEST-000001
debitos2/: crawler.js  helper.js
(+805 files in other folders)
